--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
+        <meta name="viewport" content="width=1280">
+
         <link rel="icon" href="img/French_government_logo.svg.png" type="image/x-icon">
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,6 +29,7 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
+
     </head>
 
     <body>
@@ -135,14 +138,18 @@
 
 
         <!-- Services Start -->
-        <div class="container-fluid service py-5">
+        <div class="container-fluid service py-5 contact " style="position: relative;">
+<!--            <div class="banner" style="width: 160px;position: absolute;left: 16px;top:252px;">-->
+<!--                <img src="img/de la culture.png" alt="" style="width: 100%;">-->
+<!--                <p>Visitez le site du Ministère de la Culture</p>-->
+<!--            </div>-->
             <div class="container py-5">
                 <div class="section-title mb-5 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="sub-style">
-                        <h4 class="sub-title px-3 mb-0">LA FRANCE HISTORIQUE</h4>
+                        <h4 class="sub-title px-3 mb-0" >LA FRANCE HISTORIQUE</h4>
                     </div>
-<!--                    <h1 class="display-3 mb-4">Our Service Given Physio Therapy By Expert.</h1>-->
-                    <p class="mb-0">
+
+                    <p class="mb-0" style="color: white">
                         visites virtuelles de villes et (monuments,
                         cathédrale, château)
                         France. vous permettant de découvrir l'histoire des villes françaises sans sortir de chez vous
@@ -150,7 +157,7 @@
                 </div>
                 <div class="row g-4 justify-content-center" id="services-container">
                     <!-- Paris -->
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class=" col-6 col-lg-4 col-xl-3 wow fadeInUp hid-in-mobile" data-wow-delay="0.1s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Paris.jpg" class="img-fluid-old rounded-top w-100-old" alt="Paris">
@@ -165,7 +172,7 @@
                         </div>
                     </div>
                         <!-- Ajaccio -->
-                        <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="service-item rounded">
                                 <div class="service-img rounded-top">
                                     <img src="img/Ajaccio.jpeg" class="img-fluid-old rounded-top w-100-old" alt="Ajaccio">
@@ -180,7 +187,7 @@
                             </div>
                         </div>
                         <!-- Albi -->
-                        <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
                             <div class="service-item rounded">
                                 <div class="service-img rounded-top">
                                     <img src="img/Albi.jpg" class="img-fluid-old rounded-top w-100-old" alt="Albi">
@@ -195,7 +202,7 @@
                             </div>
                         </div>
                         <!-- Amiens -->
-                        <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="service-item rounded">
                                 <div class="service-img rounded-top">
                                     <img src="img/Amiens.jpg" class="img-fluid-old rounded-top w-100-old" alt="Amiens">
@@ -210,7 +217,7 @@
                             </div>
                         </div>
                         <!-- Angers -->
-                        <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
                             <div class="service-item rounded">
                                 <div class="service-img rounded-top">
                                     <img src="img/Angers.webp" class="img-fluid-old rounded-top w-100-old" alt="Angers">
@@ -225,7 +232,7 @@
                             </div>
                         </div>
                         <!-- Annecy -->
-                        <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="service-item rounded">
                                 <div class="service-img rounded-top">
                                     <img src="img/Annecy.jpg" class="img-fluid-old rounded-top w-100-old" alt="Annecy">
@@ -240,7 +247,7 @@
                             </div>
                         </div>
                         <!-- Antibes -->
-                        <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
                             <div class="service-item rounded">
                                 <div class="service-img rounded-top">
                                     <img src="img/Antibes.webp" class="img-fluid-old rounded-top w-100-old" alt="Antibes">
@@ -255,7 +262,7 @@
                             </div>
                         </div>
                         <!-- Arles -->
-                        <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="service-item rounded">
                                 <div class="service-img rounded-top">
                                     <img src="img/Arles.jpg" class="img-fluid-old rounded-top w-100-old" alt="Arles">
@@ -270,7 +277,7 @@
                             </div>
                         </div>
                         <!-- Arras -->
-                        <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
+                        <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
                             <div class="service-item rounded">
                                 <div class="service-img rounded-top">
                                     <img src="img/Arras.jpg" class="img-fluid-old rounded-top w-100-old" alt="Arras">
@@ -285,7 +292,7 @@
                             </div>
                         </div>
                         <!-- Avignon -->
-                        <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
+                        <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
                             <div class="service-item rounded">
                                 <div class="service-img rounded-top">
                                     <img src="img/Avignon.jpg" class="img-fluid-old rounded-top w-100-old" alt="Avignon">
@@ -300,7 +307,7 @@
                             </div>
                         </div>
                         <!-- Avoriaz -->
-                        <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
+                        <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
                             <div class="service-item rounded">
                                 <div class="service-img rounded-top">
                                     <img src="img/Avoriaz.jpg" class="img-fluid-old rounded-top w-100-old" alt="Avoriaz">
@@ -315,7 +322,7 @@
                             </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
+                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bandol.jpeg" class="img-fluid-old rounded-top w-100-old" alt="Bandol">
@@ -330,7 +337,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
+                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bastia.jpg" class="img-fluid-old rounded-top w-100-old" alt="Bastia">
@@ -345,7 +352,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
+                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bayeux.jpg" class="img-fluid-old rounded-top w-100-old" alt="Bayeux">
@@ -360,7 +367,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
+                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bayonne.webp" class="img-fluid-old rounded-top w-100-old" alt="Bayonne">
@@ -375,7 +382,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
+                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Beaulieu-sur-mer.jpg" class="img-fluid-old rounded-top w-100-old" alt="Beaulieu-sur-Mer">
@@ -390,7 +397,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
+                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Besançon.webp" class="img-fluid-old rounded-top w-100-old" alt="Besançon">
@@ -405,7 +412,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
+                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Biarritz.jpg" class="img-fluid-old rounded-top w-100-old" alt="Biarritz">
@@ -420,7 +427,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
+                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Blois.webp" class="img-fluid-old rounded-top w-100-old" alt="Blois">
@@ -435,7 +442,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
+                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bonifacio.jpg" class="img-fluid-old rounded-top w-100-old" alt="Bonifacio">
@@ -450,7 +457,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
+                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bordeaux.jpg" class="img-fluid-old rounded-top w-100-old" alt="Bordeaux">
@@ -465,7 +472,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
+                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bourges.jpeg" class="img-fluid-old rounded-top w-100-old" alt="Bourges">
@@ -480,7 +487,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
+                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Brest.jpg" class="img-fluid-old rounded-top w-100-old" alt="Brest">
@@ -495,7 +502,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
+                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Brides Les Bains.jpg" class="img-fluid-old rounded-top w-100-old" alt="Brides Les Bains">
