--- a/Paris.html
+++ b/Paris.html
@@ -112,10 +112,15 @@
 <div class="container-fluid appointment ">
     <div class="container py-5">
         <div class="row g-5 align-items-center">
-            <div class="col-lg-6 wow fadeInLeft" data-wow-delay="0.2" style="visibility: visible; animation-name: fadeInLeft;">
+            <div class="wow fadeInLeft" style="text-align: center" >
+                <h4 class="sub-tite pe-3 mb-0" style="font-size: 36px;color: #818181;">
+                    Les trésors culturels de Paris.
+                </h4>
+            </div>
+            <div class="col-lg-6 wow fadeInLeft" data-wow-delay="0.2" style="visibility: visible; animation-name: fadeInLeft;margin-top: 0;">
                 <div class="section-title text-start">
-                    <h4 class="sub-title pe-3 mb-0">A short drone video of the city.</h4>
-                    <h1 class="display-4 mb-4">Paris </h1>
+
+                    <h1 class="display-4 mb-4" style="color: #818181;">Paris </h1>
                     <p class="mb-4">
                         A short introductory drone video about the city.                    </p>
                     <div class="row g-4">
@@ -176,7 +181,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInRight;">
+            <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInRight;margin-top: 0;">
 <!--                <p class="description">-->
 <!--                    The history of Paris dates back to approximately 259 BC, with the Parisii, a Celtic tribe settled on the banks of the Seine. In 52 BC, the fishermen village was conquered by the Romans, founding a Gallo-Roman town called Lutetia.-->
 <!--                    The city changed its name to Paris during the fourth century. During this period, the city was threatened by Attila the Hun and his army, and according to the legend, the inhabitants of Paris resisted the attacks thanks to the providential intervention of Saint Geneviève (patron saint of the city).-->
@@ -213,7 +218,7 @@
 <!--                    In November 2015, Paris witnessed a tragic event, several terrorist attacks hit the city and the suburbs of Saint-Denis, killing 137 people and injuring 415.-->
 <!--                </p>-->
                 <div class="row g-4 justify-content-center" style="margin-top: 80px;">
-                    <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-md-6 col-lg-6 col-xl-6 wow fade4434InUp" data-wow-delay="0.1s">
                         <a href="Palais.html" class="text-center">
                             <div class="row-cols-1 feature-item p-4">
                                 <div class="col-12">
@@ -224,8 +229,7 @@
                                     </div>
                                     <div class="feature-content d-flex flex-column">
                                         <h5 class="mb-4">Lieux historiques de Paris</h5>
-                                        <p class="mb-0">Larn sea about these blocks and unique features.</p>
-                                    </div>
+                                     </div>
                                 </div>
                             </div>
                         </a>
@@ -236,13 +240,13 @@
                                 <div class="col-12">
                                     <div class="feature-icon mb-4">
                                         <div class="p-3 d-inline-flex bg-white rounded">
-                                            <i class="fas fa-landmark fa-4x text-primary"></i>
+<!--                                            <i class="fas fa-landmark fa-4x text-primary"></i>-->
+                                            <i class="fas fa-archway fa-4x text-primary"></i>
                                         </div>
                                     </div>
                                     <div class="feature-content d-flex flex-column">
-                                        <h5 class="mb-4">Palais de Paris</h5>
-                                        <p class="mb-0">Larn sea about these blocks and unique features.</p>
-                                    </div>
+                                        <h5 class="mb-4">Monuments de Paris</h5>
+                                     </div>
                                 </div>
                             </div>
                         </a>
@@ -275,8 +279,7 @@
                                     </div>
                                     <div class="feature-content d-flex flex-column">
                                         <h5 class="mb-4">Castles de Paris</h5>
-                                        <p class="mb-0">Larn sea about these blocks and unique features.</p>
-                                    </div>
+                                     </div>
                                 </div>
                             </div>
                         </a>
@@ -292,8 +295,7 @@
                                     </div>
                                     <div class="feature-content d-flex flex-column">
                                         <h5 class="mb-4">Museums de Paris</h5>
-                                        <p class="mb-0">Larn sea about these blocks and unique features.</p>
-                                    </div>
+                                     </div>
                                 </div>
                             </div>
                         </a>
