--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </div>
                 <div class="row g-4 justify-content-center" id="services-container">
                     <!-- Paris -->
-                    <div class=" col-6 col-lg-4 col-xl-3 wow fadeInUp hid-in-mobile" data-wow-delay="0.1s">
+                    <div class=" col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hid-in-mobile" data-wow-delay="0.1s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Paris.jpg" class="img-fluid-old rounded-top w-100-old" alt="Paris">
@@ -277,7 +277,7 @@
                             </div>
                         </div>
                         <!-- Arras -->
-                        <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
+                        <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
                             <div class="service-item rounded">
                                 <div class="service-img rounded-top">
                                     <img src="img/Arras.jpg" class="img-fluid-old rounded-top w-100-old" alt="Arras">
@@ -292,7 +292,7 @@
                             </div>
                         </div>
                         <!-- Avignon -->
-                        <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
+                        <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
                             <div class="service-item rounded">
                                 <div class="service-img rounded-top">
                                     <img src="img/Avignon.jpg" class="img-fluid-old rounded-top w-100-old" alt="Avignon">
@@ -307,7 +307,7 @@
                             </div>
                         </div>
                         <!-- Avoriaz -->
-                        <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
+                        <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
                             <div class="service-item rounded">
                                 <div class="service-img rounded-top">
                                     <img src="img/Avoriaz.jpg" class="img-fluid-old rounded-top w-100-old" alt="Avoriaz">
@@ -322,7 +322,7 @@
                             </div>
                     </div>
 
-                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
+                    <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bandol.jpeg" class="img-fluid-old rounded-top w-100-old" alt="Bandol">
@@ -337,7 +337,7 @@
                         </div>
                     </div>
 
-                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
+                    <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bastia.jpg" class="img-fluid-old rounded-top w-100-old" alt="Bastia">
@@ -352,7 +352,7 @@
                         </div>
                     </div>
 
-                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
+                    <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bayeux.jpg" class="img-fluid-old rounded-top w-100-old" alt="Bayeux">
@@ -367,7 +367,7 @@
                         </div>
                     </div>
 
-                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
+                    <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bayonne.webp" class="img-fluid-old rounded-top w-100-old" alt="Bayonne">
@@ -382,7 +382,7 @@
                         </div>
                     </div>
 
-                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
+                    <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Beaulieu-sur-mer.jpg" class="img-fluid-old rounded-top w-100-old" alt="Beaulieu-sur-Mer">
@@ -397,7 +397,7 @@
                         </div>
                     </div>
 
-                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
+                    <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Besançon.webp" class="img-fluid-old rounded-top w-100-old" alt="Besançon">
@@ -412,7 +412,7 @@
                         </div>
                     </div>
 
-                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
+                    <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Biarritz.jpg" class="img-fluid-old rounded-top w-100-old" alt="Biarritz">
@@ -427,7 +427,7 @@
                         </div>
                     </div>
 
-                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
+                    <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Blois.webp" class="img-fluid-old rounded-top w-100-old" alt="Blois">
@@ -442,7 +442,7 @@
                         </div>
                     </div>
 
-                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
+                    <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bonifacio.jpg" class="img-fluid-old rounded-top w-100-old" alt="Bonifacio">
@@ -457,7 +457,7 @@
                         </div>
                     </div>
 
-                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
+                    <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.4s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bordeaux.jpg" class="img-fluid-old rounded-top w-100-old" alt="Bordeaux">
@@ -472,7 +472,7 @@
                         </div>
                     </div>
 
-                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
+                    <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.1s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Bourges.jpeg" class="img-fluid-old rounded-top w-100-old" alt="Bourges">
@@ -487,7 +487,7 @@
                         </div>
                     </div>
 
-                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
+                    <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.2s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Brest.jpg" class="img-fluid-old rounded-top w-100-old" alt="Brest">
@@ -502,7 +502,7 @@
                         </div>
                     </div>
 
-                    <div class="col-6 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
+                    <div class="col-4 col-md-6 col-lg-4 col-xl-3 wow fadeInUp hidden-service" data-wow-delay="0.3s">
                         <div class="service-item rounded">
                             <div class="service-img rounded-top">
                                 <img src="img/Brides Les Bains.jpg" class="img-fluid-old rounded-top w-100-old" alt="Brides Les Bains">
