--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                 <div class="service-content rounded-bottom bg-light p-4">
                                     <div class="service-content-inner">
                                         <h5 class="mb-4">Arles</h5>
-                                        <p class="mb-4">Step into history with Roman monuments and Van Gogh's inspirations.</p>
+                                        <p class="mb-4">The history of Paris dates back to approximately 259 BC, with the Parisii, a Celtic tribe settled on the banks of the Seine.</p>
                                         <a href="Paris.html" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Read More</a>
                                     </div>
                                 </div>
