--- a/index.html
+++ b/index.html
@@ -138,13 +138,35 @@
 
 
         <!-- Services Start -->
+<!--        <div class="container py-3">-->
+<!--            -->
+<!--        </div>-->
         <div class="container-fluid service py-5 contact " style="position: relative;">
-<!--            <div class="banner" style="width: 160px;position: absolute;left: 16px;top:252px;">-->
-<!--                <img src="img/de la culture.png" alt="" style="width: 100%;">-->
-<!--                <p>Visitez le site du Ministère de la Culture</p>-->
-<!--            </div>-->
+
+            <div class="row justify-content-center" style="text-align: center;">
+                <div class="col-4 col-md-4 col-lg-4 col-xl-4 wow fadeInLeft" data-wow-delay="0.1s" style="">
+                    <a href="https://www.culture.gouv.fr/" target="_blank">
+                    <img src="img/logo-1.png" class="" alt="Ajaccio" style="width: 50%;">
+                    <p style="color: #000;">MINISTÈRE DE LA CULTURE</p>
+                    </a>
+                </div>
+                <div class="col-4 col-md-4 col-lg-4 col-xl-4 wow fadeInUp" data-wow-delay="0.1s" style="">
+                    <a href="https://www.enseignementsup-recherche.gouv.fr/fr" target="_blank">
+                    <img src="img/logo-1.png" class="" alt="Ajaccio" style="width: 50%;">
+                    <p style="color: #000;"> MINISTÈRE CHARGÉ DE L'ENSEIGNEMENT
+                        SUPÉRIEUR ET DE LA RECHERCHE</p>
+                    </a>
+                </div>
+                <div class="col-4 col-md-4 col-lg-4 col-xl-4 wow fadeInRight" data-wow-delay="0.1s" style="">
+                    <a href="https://francearchives.gouv.fr/" target="_blank">
+                    <img src="img/logo-1.png" class="" alt="Ajaccio" style="width: 50%;">
+                    <p style="color: #000;"> RÉPUBLIQUE FRANÇAISE <br> FRANCE ARCHIVES</p>
+                    </a>
+                </div>
+            </div>
+
             <div class="container py-5">
-                <div class="section-title mb-5 wow fadeInUp" data-wow-delay="0.2s">
+                <div class="section-title mb-1 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="sub-style">
                         <h4 class="sub-title px-3 mb-0" >LA FRANCE HISTORIQUE</h4>
                     </div>
@@ -155,7 +177,14 @@
                         France. vous permettant de découvrir l'histoire des villes françaises sans sortir de chez vous
                     </p>
                 </div>
+                <div class="form-floating mb-2" style="width: 250px;margin: auto;color: white;position: relative">
+                    <input type="text" class="search-input bg-transparent border border-white" id="name" placeholder="entrez le nom de la ville">
+                    <svg id="search-icon" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 50 50">
+                        <path d="M 21 3 C 11.621094 3 4 10.621094 4 20 C 4 29.378906 11.621094 37 21 37 C 24.710938 37 28.140625 35.804688 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460938 28.085938 38 24.222656 38 20 C 38 10.621094 30.378906 3 21 3 Z M 21 5 C 29.296875 5 36 11.703125 36 20 C 36 28.296875 29.296875 35 21 35 C 12.703125 35 6 28.296875 6 20 C 6 11.703125 12.703125 5 21 5 Z"></path>
+                    </svg>
+                </div>
                 <div class="row g-4 justify-content-center" id="services-container">
+
                     <!-- Paris -->
                     <div class="col-4 col-md-6 col-lg-4 col-xl-3  wow fadeInUp hid-in-mobile" data-wow-delay="0.1s">
                         <div class="service-item rounded">
@@ -614,7 +643,7 @@
 
         <!-- Template Javascript -->
         <script src="js/main.js"></script>
-        
+
     </body>
 
 </html>
