--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <div class="carousel-caption-content p-3">
                             <h1 class="display-1 text-capitalize text-white mb-4">LA FRANCE HISTORIQUE</h1>
                             <p class="mb-5 fs-3">
-                                Architecture, histoire et patrimoine culturel de France
+                                ARCHITECTURE, HISTOIRE ET PATRIMOINE CULTUREL DE FRANCE
                             </p>
                         </div>
                     </div>
