--- a/Paris.html
+++ b/Paris.html
@@ -98,7 +98,7 @@
 
 
 <!-- Header Start -->
-        <div class="container-fluid bg-breadcrumb">
+        <div class="container-fluid bg-breadcrumb ">
             <div class="container text-center py-5" style="max-width: 900px;">
                 <h1 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Paris</h1>
                 <ol class="breadcrumb justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
@@ -109,18 +109,18 @@
             </div>
         </div>
         <!-- Header End -->
-<div class="container-fluid appointment ">
+<div class="container-fluid appointment contact ">
     <div class="container py-5">
         <div class="row g-5 align-items-center">
             <div class="wow fadeInLeft" style="text-align: center" >
-                <h4 class="sub-tite pe-3 mb-0" style="font-size: 36px;color: #818181;">
+                <h4 class="sub-tite pe-3 mb-0 " style="font-size: 36px;color: #fff;">
                     Les trésors culturels de Paris.
                 </h4>
             </div>
             <div class="col-lg-6 wow fadeInLeft" data-wow-delay="0.2" style="visibility: visible; animation-name: fadeInLeft;margin-top: 0;">
                 <div class="section-title text-start">
 
-                    <h1 class="display-4 mb-4" style="color: #818181;">Paris </h1>
+                    <h1 class="display-4 mb-4" style="color: #fff;">Paris </h1>
                     <p class="mb-4">
                         A short introductory drone video about the city.                    </p>
                     <div class="row g-4">
