--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <a href="https://www.enseignementsup-recherche.gouv.fr/fr" target="_blank">
                     <img src="img/Logo-1.png"  class="" alt="Ajaccio" style="width: 35%;">
                     <p style="color: #000;"> MINISTÈRE CHARGÉ DE L'ENSEIGNEMENT
-                        SUPÉRIEUR ET DE LA RECHERCHE</p>
+                       </br> SUPÉRIEUR ET DE LA RECHERCHE</p>
                     </a>
                 </div>
                 <div class="col-4 col-md-4 col-lg-4 col-xl-4 wow fadeInRight" data-wow-delay="0.1s" style="">
