--- a/Palais.html
+++ b/Palais.html
@@ -117,7 +117,7 @@
 </div>
 <!-- Header End -->
 <!-- Services Start -->
-<div class="container-fluid service">
+<div class="container-fluid service contact ">
     <div class="container py-5">
         <div class="section-title mb-5 wow fadeInUp" data-wow-delay="0.2s">
 <!--            <div class="sub-style">-->
