--- a/singl-palais.html
+++ b/singl-palais.html
@@ -50,7 +50,7 @@
 
 
 <!-- Topbar Start -->
-<div class="container-fluid bg-dark px-5 d-none d-lg-block">
+<div class="container-fluid bg-dark px-5 d-none d-lg-block ">
     <div class="row gx-0 align-items-center" style="height: 45px;">
         <div class="col-lg-8 text-center text-lg-start mb-lg-0">
             <div class="d-flex flex-wrap">
@@ -79,7 +79,7 @@
 
 
 <!-- Navbar & Hero Start -->
-<div class="container-fluid position-relative p-0">
+<div class="container-fluid position-relative p-0 ">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white px-4 px-lg-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
@@ -112,8 +112,8 @@
 </div>
 <!-- Navbar & Hero End -->
 
-
-<div class="container-fluid about bg-light py-5">
+<div class="contact">
+<div class="container-fluid about bg-light py-5 ">
     <!-- Header Start -->
     <div class="container-fluid">
         <div class="container" style="    margin-top: 100px">
@@ -252,6 +252,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 <!-- Modal Video -->
 <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
