--- a/Palais.html
+++ b/Palais.html
@@ -581,7 +581,7 @@
             </div>
 
             <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
-                <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="javascript:void(0)"id="load-more-btn">Services More</a>
+                <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="javascript:void(0)" id="load-more-text-btn">Services More</a>
             </div>
         </div>
     </div>
