--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
 <!--            -->
 <!--        </div>-->
         <div class="container-fluid service py-5 contact " style="position: relative;">
-
+            <div class="container">
             <div class="row justify-content-center" style="text-align: center;">
+
                 <div class="col-4 col-md-4 col-lg-4 col-xl-4 wow fadeInLeft" data-wow-delay="0.1s" style="">
                     <a href="https://www.culture.gouv.fr/" target="_blank">
                     <img src="img/Logo-1.png"  class="" alt="Ajaccio" style="width: 35%;">
@@ -163,8 +164,9 @@
                     <p style="color: #000;"> RÉPUBLIQUE FRANÇAISE <br> FRANCE ARCHIVES</p>
                     </a>
                 </div>
-            </div>
 
+            </div>
+            </div>
             <div class="container py-5">
                 <div class="section-title mb-1 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="sub-style">
